# bprmf

./: .gitignore  Makefile  README.md  pyproject.toml
src/: main.py
src/datasets/amazon-book/: test.txt
src/models/: base.py  bprmf.py  bprmf_torch.py
src/utils/: helpers.py  metrics.py  parser.py  samplers.py  types.py
src/utils/loaders/: base.py  bprmf.py
