[tool.poetry]
name = "bprmf"
version = "0.1.0"
description = ""
authors = ["jchanxtarov <ryotaro.shimizu@zozo.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.7"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
