[tool.poetry]
name = "bprmf"
version = "0.1.0"
description = ""
authors = ["jchanxtarov <ryotaro.shimizu@zozo.com>"]

[tool.poetry.dependencies]
python = ">=3.7.1,<3.11"
numpy = "^1.21.2"
pandas = "^1.3.3"
torch = "^1.9.1"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.7"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
